--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,82 @@
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.fondo{
+    background-color: #f9f9f9;
+    width: 400px;
+    height: 600px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    border-radius: 20px;
+    margin: auto;
+    box-shadow: 1px 1px 1px grey;
 
-*/
+
+}
+
+.newitem{
+    display: inline-flex;
+    justify-content: flex-start;
+    width:300px;
+    height: 35px;
+    border-bottom: 1px;
+    text-align: center;
+    align-items: center;
+    border-bottom: 1px solid;
+    background-color: #f9f9f9;
+   
+
+}
+.close{
+    width: 20px;
+    height: 20px;
+    display: inline-flex; 
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    
+}
+
+.form {
+    margin-top: 10px;
+    border:0px;
+    background-color: white; 
+
+      
+}
+
+.off {
+    opacity: 0;
+    width: 20px;
+    height: 20px;
+    display: inline-flex; 
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+   
+}
+.on {
+    opacity: 1;
+    width: 20px;
+    height: 20px;
+    display: inline-flex; 
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    cursor: pointer;
+  
+  }
+
+  .titular {
+    color: grey;
+    text-align: center;
+  }
+
+  .pap{
+    font-size: 10px;
+    text-align: left;
+  }
+
+  .notaunosuperpuesta{
+    background-color: yellow;
+  }
